# FastPlay

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: ci.yml
assets/: fastplay.rc
docs/: index.html  release-notes-v0.1.0.md  release-notes-v0.1.4.md  release.md
src/: main.rs
src/app/: commands.rs  drop_stats.rs  events.rs  mod.rs  overlay.rs  session.rs  settings.rs  state.rs  timeline_ui.rs
src/audio/: sink.rs
src/ffi/: d3d11.rs  dxgi.rs  ffmpeg.rs  ffmpeg_shim.c  ffmpeg_shim.h  mod.rs  runtime.rs  wasapi.rs
src/media/: audio.rs  mod.rs  seek.rs  source.rs  subtitle.rs  video.rs
src/platform/: input.rs  window.rs
src/playback/: clock.rs  generations.rs  metrics.rs  mod.rs  queues.rs
src/render/: mod.rs  presenter.rs  surface_registry.rs  swapchain.rs  timeline.rs
validation/: m5-seek.srt
wix/: main.wxs
